# stream-logs-demo

./: .gitignore  pyproject.toml  readme.md  stream_logs.py
backend/: readme.md
backend/app/: __init__.py  log_producer.py  logger.py  main.py  session_registry.py  system_monitor.py  system_utils.py
backend/app/routes/: logs.py
frontend/: index.html  package-lock.json  package.json  readme.md  vite.config.js
frontend/public/: index.html
frontend/src/: App.vue  environment.d.ts
frontend/src/components/: LogViewer.vue
static/: app.js  index.html  style.css
