[tool.poetry]
name = "stream-logs-demo"
version = "0.1.0"
description = "A FastAPI backend for demonstrating streaming logs with Server-Sent Events (SSE)"
authors = ["Edward van Eechoud <evaneechoud@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "backend" }
]
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-jose = "^3.3.0"
psutil = "^7.0.0"
aiofiles = "^24.1.0"

[tool.poetry.scripts]
start-process = "backend.app.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true